--- a/Demo11/index.html
+++ b/Demo11/index.html
@@ -24,7 +24,7 @@
     <![endif]-->
 
   <!-- Document Title -->
-  <title>Naijamart Freelancer</title>
+  <title>Naijamart PartyVendor</title>
 </head>
 
 <body>
@@ -646,7 +646,7 @@
           <div class="swiper-wrapper">
             <div class="swiper-slide">
               <div class="overflow-hidden position-relative h-100">
-                <img src="../images/about/NaijaMart Long Banner Freelancer.png" alt="" />
+                <img src="../images/party/NaijaMart Party Vendor Main Banner.png" alt="" />
               </div>
             </div>
           </div>
@@ -679,7 +679,7 @@
           <div class="swiper-wrapper">
             <div class="swiper-slide">
               <div class="overflow-hidden position-relative h-100">
-                <img src="../images/about/Mobile Naija Freelancer.png" alt="" />
+                <img src="../images/party/NaijaMart Party Vendor Mobile Banner.png" alt="" />
               </div>
             </div>
           </div>
